@@ -1110,6 +1110,9 @@
         comment = "AI improvements"
     [/entry]
     [entry]
+        name = "Maxim Biro"
+    [/entry]
+    [entry]
         name = "Maximilian Lupke (malumalu)"
     [/entry]
     [entry]
