@@ -5,7 +5,8 @@ changelog: https://sourceforge.net/p/wesnoth/code/ci/master/tree/changelog
 Version 1.11.2+dev:
  * Language and i18n:
    * Updated translations: Indonesian, Portuguese, Vietnamese.
-
+ * User interface:
+   * Fixed a bug in the cursor positioning in some text entries.
 
 Version 1.11.2:
  * Add-ons client:
