@@ -1,6 +1,9 @@
 Version 1.11.2+dev:
  * Language and i18n:
    * Updated translations: Indonesian, Portuguese, Vietnamese
+ * User interface:
+   * Fixed (bug #17220): Cursor in gui2 text box now behaves appropriately after
+     text box overflow occurs.
  * Miscellaneous and bug fixes
    * Switched to git version control. Hosting moved to SourceForge
    * Improved: Autorevision based revision numbers in CMake.
